--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "joi": "^17.4.1",
+    "lodash": "^4.17.21",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0"
   }
